--- a/.github/workflows/rathole/workflow.yml
+++ b/.github/workflows/rathole/workflow.yml
@@ -24,5 +24,6 @@ jobs:
       - name: Docker Build And Push
         uses: docker/build-push-action@v5
         with:
+          context: .github/workflows/rathole
           push: true
           tags: tianxiadys/rathole:0.5.0,tianxiadys/rathole:latest
