--- a/.github/workflows/shadowsocks.yml
+++ b/.github/workflows/shadowsocks.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
     paths:
+      - .github/workflows/shadowsocks.yml
       - .github/workflows/shadowsocks/**
 jobs:
   build-docker:
