--- a/.github/workflows/rathole.yml
+++ b/.github/workflows/rathole.yml
@@ -5,7 +5,7 @@ on:
       - main
     paths:
       - .github/workflows/rathole.yml
-      - .github/workflows/rathole/**
+      - .docker/rathole/**
 jobs:
   build-docker:
     runs-on: ubuntu-latest
@@ -25,6 +25,6 @@ jobs:
       - name: Docker Build And Push
         uses: docker/build-push-action@v5
         with:
-          context: .github/workflows/rathole
+          context: .docker/rathole
           push: true
           tags: tianxiadys/rathole:0.5.0,tianxiadys/rathole:latest
