--- a/.github/workflows/shadowsocks.yml
+++ b/.github/workflows/shadowsocks.yml
@@ -5,7 +5,7 @@ on:
       - main
     paths:
       - .github/workflows/shadowsocks.yml
-      - .github/workflows/shadowsocks/**
+      - .docker/shadowsocks/**
 jobs:
   build-docker:
     runs-on: ubuntu-latest
@@ -25,6 +25,6 @@ jobs:
       - name: Docker Build And Push
         uses: docker/build-push-action@v5
         with:
-          context: .github/workflows/shadowsocks
+          context: .docker/shadowsocks
           push: true
           tags: tianxiadys/shadowsocks:1.22.0,tianxiadys/shadowsocks:latest
