--- a/.github/workflows/RatHole.yml
+++ b/.github/workflows/RatHole.yml
@@ -4,8 +4,8 @@ on:
     branches:
       - main
     paths:
-      - .docker/rathole/**
-      - .github/workflows/rathole.yml
+      - .github/workflows/RatHole/**
+      - .github/workflows/RatHole.yml
 jobs:
   build-docker:
     runs-on: ubuntu-latest
@@ -25,7 +25,7 @@ jobs:
       - name: Docker Build And Push
         uses: docker/build-push-action@v5
         with:
-          context: .docker/rathole
+          context: .github/workflows/RatHole
           push: true
           tags:
             tianxiadys/rathole:0.5.0-2,
