--- a/.github/workflows/LoongCollector/Dockerfile
+++ b/.github/workflows/LoongCollector/Dockerfile
@@ -4,7 +4,6 @@ ARG ARCH=x86_64
 ARG REGION=cn-hangzhou
 ARG SYSTEM=linux64
 ARG VERSION=3.2.4
-ARG BINARY=loongcollector_${VERSION}
 ARG ZIPNAME=loongcollector-${SYSTEM}
 ARG ZIPURL=https://aliyun-observability-release-${REGION}.oss-${REGION}.aliyuncs.com/loongcollector/${SYSTEM}/${VERSION}/${ARCH}/main/${ZIPNAME}.tar.gz
 
@@ -17,15 +16,10 @@ apt clean
 ###
 curl -L -o /data/download.tgz ${ZIPURL}
 tar -zxf /data/download.tgz -C /app
-mv -t /app /app/${ZIPNAME}/bin/${BINARY}
-mv -t /app /app/${ZIPNAME}/bin/libcoolbpf.so.1.0.0
-mv -t /app /app/${ZIPNAME}/bin/libdcgm.so
-mv -t /app /app/${ZIPNAME}/bin/libeBPFDriver.so
-mv -t /app /app/${ZIPNAME}/bin/libGoPluginAdapter.so
-mv -t /app /app/${ZIPNAME}/bin/libGoPluginBase.so
+mv -t /app /app/${ZIPNAME}/bin/*
 mv -t /app /app/${ZIPNAME}/conf
-mv -t /app /app/${ZIPNAME}/resources/ca-bundle.crt
-link /app/${BINARY} /app/loongcollector
+mv -t /app /app/${ZIPNAME}/resources/*
+link /app/loongcollector_${VERSION} /app/loongcollector
 find /app
 find /data
 ###
