--- a/.github/workflows/ShadowSocks.yml
+++ b/.github/workflows/ShadowSocks.yml
@@ -30,4 +30,5 @@ jobs:
           tags:
             tianxiadys/shadowsocks:1.23.5-2,
             tianxiadys/shadowsocks:1.23.5,
+            tianxiadys/shadowsocks:1.23.5-alpine,
             tianxiadys/shadowsocks:latest
