--- a/.github/workflows/LoongCollector.yml
+++ b/.github/workflows/LoongCollector.yml
@@ -28,4 +28,7 @@ jobs:
           context: .github/workflows/LoongCollector
           push: true
           tags:
-            tianxiadys/loongcollector:0.1.0-3
+            tianxiadys/loongcollector:3.2.4-3,
+            tianxiadys/loongcollector:3.2.4,
+            tianxiadys/loongcollector:3.2.4-debian,
+            tianxiadys/loongcollector:latest
