--- a/.github/workflows/RatHole.yml
+++ b/.github/workflows/RatHole.yml
@@ -30,4 +30,5 @@ jobs:
           tags:
             tianxiadys/rathole:0.5.0-3,
             tianxiadys/rathole:0.5.0,
+            tianxiadys/rathole:0.5.0-debian,
             tianxiadys/rathole:latest
